# 2025-20698931

./: README.md  git-cheat-sheet.txt  hello.txt  hi_and_date.cmd
.github/workflows/: doxygen-deploy.yml
WS3/: .gitignore  libadder.exp
Worksheet5/: Doxyfile
Worksheet5/html/: adder_8cpp.html  adder_8h.html  adder_8h_source.html  calc_8cpp.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  navtreedata.js  navtreeindex0.js
Worksheet6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Worksheet7/Exercise1/: CMakeLists.txt  Cylinder.cxx
Worksheet7/Exercise3/QtBaseStation/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
